<?xml version="1.0" encoding="utf-8"?>
<resources>

<!--
    Agile GTD. Flexible Android implementation of GTD.
    Copyright (C) 2011  Denis Nelubin

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

    <string name="app_name">Agile GTD</string>
    <string name="add_folder_title">Add folder</string>
    <string name="create_folder">Create folder</string>
    <string name="folder_name">Name</string>
    <string name="folder_name_hint">Folder Name</string>
    <string name="folder_type">Type</string>
    <string name="folder_type_hint">&lt;Folder Type&gt;</string>
    <string name="project_folder">Project</string>
    <string name="context_folder">Context</string>
    <string name="priority_folder">Priority</string>
    <string name="person_folder">Person</string>
    <string name="status_folder">Status</string>
    <string name="projects_folder">Projects</string>
    <string name="contexts_folder">Contexts</string>
    <string name="priorities_folder">Priorities</string>
    <string name="persons_folder">Persons</string>
    <string name="statuses_folder">Statuses</string>
    <string name="inbox_folder">Inbox</string>
    <string name="trash_folder">Trash</string>
    <string name="completed_folder">Completed</string>
    <string name="none">&lt;none&gt;</string>
    <string name="enter_folder_name_error">Please enter the folder name.</string>
    <string name="folder_already_exists_error">Folder with this name already exists. Try to change the name.</string>
    <string name="open_folder">Open</string>
    <string name="edit_folder">Edit</string>
    <string name="move_up_folder">Move Up</string>
    <string name="move_down_folder">Move Down</string>
    <string name="move_first_folder">Move to Top</string>
    <string name="move_last_folder">Move to Bottom</string>
    <string name="move_to_folder">Move To...</string>
    <string name="share_folder">Send To...</string>
    <string name="share_folder_title">Send Folder To</string>
    <string name="delete_folder">Delete</string>
    <string name="edit_folder_title">Edit folder</string>
    <string name="save_folder">Save folder</string>
    <string name="delete_folder_confirm">Are you sure want to delete this folder? All subfolders and actions will be permanently destroyed.</string>
    <string name="delete_button">Delete</string>
    <string name="cancel_button">Cancel</string>
    <string name="add_action_title">Add action</string>
    <string name="action_body_hint">Type action description here</string>
    <string name="create_action">Create action</string>
    <string name="enter_action_body_error">Please enter the action body.</string>
    <string name="open_action">Open</string>
    <string name="edit_action">Edit</string>
    <string name="move_up_action">Move Up</string>
    <string name="move_down_action">Move Down</string>
    <string name="move_first_action">Move to Top</string>
    <string name="move_last_action">Move to Bottom</string>
    <string name="copy_to_action">Copy To...</string>
    <string name="share_action">Send To...</string>
    <string name="share_action_title">Send Action To</string>
    <string name="delete_action">Delete</string>
    <string name="view_action_title">Action</string>
    <string name="delete_action_confirm">Are you sure want to delete this action? The action will be permanently removed from this folder.</string>
    <string name="root_folder">&lt;root&gt;</string>
    <string name="edit_action_title">Edit action</string>
    <string name="save_action">Save action</string>
    <string name="ok_button">OK</string>
    <string name="move_folder">Move folder</string>
    <string name="backup_restore">Backup/Restore</string>
    <string name="backup_title">Backup/Restore</string>
    <string name="backup_folder">Backup to</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="backup_and_restore">Backup and Restore</string>
    <string name="storage_mount_warning">Not mounted! Please insert and mount SD card.</string>
    <string name="backup_created">The backup is saved to %s</string>
    <string name="backup_failed">The backup is FAILED!</string>
    <string name="restore_successed">Folder and actions are restored from %s</string>
    <string name="restore_failed">The restore from %s is FAILED!</string>
    <string name="copy_action">Copy action</string>
    <string name="at_work_context_folder">At Work</string>
    <string name="at_home_context_folder">At Home</string>
    <string name="low_priority_folder">Low</string>
    <string name="normal_priority_folder">Normal</string>
    <string name="high_priority_folder">High</string>
    <string name="action_received_to_inbox">The new Action has been created in Inbox</string>
    <string name="action_received_to_root">The new Action has been created in root folder</string>
    <string name="action_receive_failure">Cannot create a new Action</string>
    <string name="add_folder">Folder</string>
    <string name="add_action">Action</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="copy">Copy</string>
    <string name="edit">Edit</string>
    <string name="new_item_position">Position of a new Action/Folder</string>
    <string name="new_item_position_first">Adding items to Top</string>
    <string name="new_item_position_last">Adding items to Bottom</string>
    <string name="settings">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="new_action_label">New action</string>
</resources>
