<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<!--
    Agile GTD. Flexible Android implementation of GTD.
    Copyright (C) 2011  Denis Nelubin

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

    <item android:id="@+id/open_action"
        android:title="@string/open_action"/>
    <item android:id="@+id/edit_action"
        android:title="@string/edit_action"/>
    <item android:id="@+id/move_first_action"
          android:title="@string/move_first_action"/>
    <item android:id="@+id/move_up_action"
        android:title="@string/move_up_action"/>
    <item android:id="@+id/move_down_action"
        android:title="@string/move_down_action"/>
    <item android:id="@+id/move_last_action"
          android:title="@string/move_last_action"/>
    <item android:id="@+id/copy_to_action"
        android:title="@string/copy_to_action"/>
    <item android:id="@+id/share_action"
        android:title="@string/share_action"/>
    <item android:id="@+id/delete_action"
        android:title="@string/delete_action"/>

</menu>
