<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<!--
    Agile GTD. Flexible Android implementation of GTD.
    Copyright (C) 2011  Denis Nelubin

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

    <item android:id="@+id/open_folder"
        android:title="@string/open_folder"/>
    <item android:id="@+id/edit_folder"
        android:title="@string/edit_folder"/>
    <item android:id="@+id/move_up_folder"
        android:title="@string/move_up_folder"/>
    <item android:id="@+id/move_down_folder"
        android:title="@string/move_down_folder"/>
    <item android:id="@+id/move_to_folder"
        android:title="@string/move_to_folder"/>
    <item android:id="@+id/delete_folder"
        android:title="@string/delete_folder"/>

</menu>
