<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_folder_dialog_root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <LinearLayout android:id="@+id/action_bar"
            style="@style/ActionBar">
        <TextView android:id="@+id/title"
                style="@style/ActionBar.Title"
                android:text="@string/add_folder"/>
        <ImageButton android:id="@+id/ok_button"
                style="@style/ActionBar.Button"
                android:src="@drawable/ok"/>
    </LinearLayout>
    
    <EditText android:id="@+id/folder_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/folder_name_hint"
        android:inputType="text"/>
    <Spinner android:id="@+id/folder_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/folder_type"/>
    <Button android:id="@+id/create_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_folder"/>

</LinearLayout>
