<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
<!--
    Agile GTD. Flexible Android implementation of GTD.
    Copyright (C) 2011  Denis Nelubin

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
    
    <TextView android:text="@string/backup"
        style="@style/GroupTitle"/>
    
    <TextView android:text="@string/backup_folder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"/>
    <TextView android:id="@+id/backup_folder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"/>
    <TextView android:id="@+id/storage_mount_warning"
        android:text="@string/storage_mount_warning"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="#ff0000"
        android:visibility="gone"/>
    
    <Button android:id="@+id/backup_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/backup"
        android:enabled="false"/>
        
    <TextView android:text="@string/restore"
        style="@style/GroupTitle"/>
        
    <com.lendamage.agilegtd.android.FileListView android:id="@+id/backups_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
        
    <Button android:id="@+id/restore_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/backup_and_restore"
        android:enabled="false"/>

</LinearLayout>
